# GRCF_samplesheet_builder

./: .gitignore  LICENSE  README.md  pyproject.toml
src/samplesheet_tool/: __init__.py  __main__.py  config.py  context.py  indexes.py  io_normalize.py  resolve.py  utils.py  validate.py
src/samplesheet_tool/ui/: __init__.py  __main__.py  actions.py  app.py  state.py  views.py
tests/: make_test_data.sh  run_test.sh
